# StarFabNeo

./: .gitignore  CHANGES.md  LICENSE  README.md  pyproject.toml  ruff.toml
make/: briefcase  build_briefcase_dev.sh  publish_origins.py  publish_scdv.py  publish_starfab.py  update_briefcase_deps.py  update_briefcase_dev.sh  update_version.py
scdv/: __init__.py  __main__.py  app.py  log.py  main.py  settings.py  utils.py
scdv/blender/: __init__.py  conf.py  link.py  status_dialog.py  utils.py
scdv/blender/addon/: __init__.py
scdv/contrib/qtmodern/: windows.py
scdv/contrib/qtmodern/resources/: style.qss
scdv/resources/ui/: AudioViewDock.ui  BlenderLinkStatusDialog.ui  ChunkedObjView.ui  DCBRecordView.ui  EntityExportDialog.ui  FileViewDock.ui  P4KExportDialog.ui  SCDVSettingsDialog.ui  SCView.ui  SettingsDialog.ui  ShipEntityExportDialog.ui  mainwindow.ui
scdv/ui/: __init__.py  common.py  utils.py
scdv/ui/dialogs/: entity_exporter.py  settings_dialog.py  ship_entity_exporter.py
scdv/ui/widgets/: chunked_file_viewer.py  common.py  image_viewer.py
scdv/ui/widgets/dcbrecord/: __init__.py
scdv/ui/widgets/dock_widgets/: __init__.py  audio.py  audio_widget.py  common.py  datacore_widget.py  file_view.py  p4k_widget.py  pyconsole.py  sc_archive.py  tagdatabase_widget.py
scdv/ui/widgets/editor/: __init__.py  gen-qrc.sh
starfab/: __init__.py  __main__.py  app.py  error.py  hooks.py  log.py  main.py  updates.py  utils.py
starfab/blender/: __init__.py  conf.py  link.py  status_dialog.py  utils.py
starfab/blender/addon/: __init__.py
starfab/contrib/qtvscodestyle/: __init__.py  base.py
starfab/contrib/qtvscodestyle/q_icon/: __init__.py  iconic_font.py  svg.py
starfab/contrib/qtvscodestyle/stylesheet/: build.py  template.qss
starfab/gui/: RibbonButton.py  RibbonPane.py  RibbonTab.py  RibbonTextbox.py  RibbonWidget.py  __init__.py  utils.py
starfab/gui/dialogs/: export_dialog.py  list_dialog.py  lists_dialog.py  run_dialog.py  settings_dialog.py  splash_screen.py
starfab/gui/widgets/: action_map.py  chunked_file_viewer.py  common.py  export_utils.py  hardpoint_editor.py  image_viewer.py  localization.py  object_container_viewer.py  planet_viewer.py  preview3d.py
starfab/gui/widgets/dcbrecord/: __init__.py
starfab/gui/widgets/dock_widgets/: __init__.py  audio_widget.py  common.py  datacore_widget.py  file_view.py  p4k_widget.py  pyconsole.py  tagdatabase_widget.py
starfab/gui/widgets/editor/: __init__.py  embed.qrc
starfab/gui/widgets/markdown/: __init__.py
starfab/gui/widgets/markdown/resources/: gitlab.css  index.html  markdown.qrc  markdownrc.py
starfab/gui/widgets/pages/: __init__.py  page_DataView.py  page_NavView.py  page_PlanetView.py
starfab/gui/widgets/pages/content/: __init__.py  character_selector.py  common.py  entity_selector.py  export_log.py  prefab_selector.py  preview_options.py  soc_selector.py  vehicle_selector.py  weapon_selector.py
starfab/gui/widgets/planets/: crosshair_overlay.py  effect_overlay.py  grid_overlay.py  planet_viewer.py  waypoint_overlay.py
starfab/models/: __init__.py  audio.py  common.py  datacore.py  localization.py  p4k.py  planet.py  sc.py  tag_database.py
starfab/planets/: __init__.py  data.py  ecosystem.py  planet.py  planet_renderer.py  planet_server.py  shader.hlsl
starfab/planets/hlsl/: hillshade.hlsl  shader.hlsl
starfab/plugins/: __init__.py
starfab/resources/: Icons.py  StyleSheets.py  __init__.py
starfab/resources/stylesheets/: Red-color-theme.json  abyss_color_theme.json  dark_vs.json  dimmed-monokai-color-theme.json  hc_black.json  light_vs.json  monokai-color-theme.json  quietlight-color-theme.json  solarized-light-color-theme.json  solarized_dark_color_theme.json  tomorrow-night-blue-color-theme.json
starfab/resources/ui/: AboutDialog.ui  ActionMapView.ui  AudioTreeWidget.ui  BlenderRibbonWidget.ui  ChunkedObjView.ui  ContentView.ui  DCBRecordView.ui  DataView.ui  EntityExportDialog.ui  EntityExportPage.ui  ExportSettingsForm.ui  FileView.ui  FileViewDock.ui  LicenseDialog.ui  LoadoutView.ui  LocalizationView.ui  NavView.ui  P4KExportDialog.ui  PlanetView.ui  PreviewOptions.ui  RunDialog.ui  SettingsDialog.ui  mainwindow.ui
starfab/resources/ui/settingsPanes/: generalSettings.ui
starfab/settings/: __init__.py
