[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "starfab"
version = "0.4.8"
description = "StarFab - The Star Citizen data tool"
authors = [ "ventorvar <ventorvar@gmail.com>", "th3st0rmtr00p3r <th3st0rmtr00p3r@tkdomain.org>", "VMXEO <>",]

[tool.briefcase]
project_name = "StarFab"
bundle = "scmodding.starfab"
version = "0.4.8"
url = "https://gitlab.com/scmodding/tools/starfab"
license = ""
author = "ventorvar"
author_email = "ventorvar@gmail.com"

[tool.poetry.dependencies]
python = ">=3.10.2,<3.11"
QtPy = "2.3.1"
QtAwesome = "^1.2.3"
PySide6 = "^6.5.2"
Pillow = "^10.0.1"
qtconsole = "5.4.3"
humanize = "^4.8.0"
rpyc = "^5.3.1"
sentry-sdk = "1.5.8"
pyvistaqt = "^0.11.0"
quaternionic = "^1.0.6"

[tool.poetry.dev-dependencies]
toml = "^0.10.2"
briefcase = "^0.3.7"

[tool.briefcase.app.starfab]
formal_name = "StarFab"
description = "StarFab"
icon = "starfab/resources/starfab"
installer_icon = "starfab/resources/starfab"
sources = [ "starfab",]
requires = [ "-r", "dist/requirements.txt",]

[tool.briefcase.app.starfab.macOS]
requires = []

[tool.briefcase.app.starfab.linux]
requires = []
system_requires = []

[tool.briefcase.app.starfab.windows]
requires = []

[tool.briefcase.app.starfab.iOS]
requires = []

[tool.briefcase.app.starfab.android]
requires = []
