[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "starfab"
version = "0.4.9"
description = "StarFab - The Star Citizen data tool"
authors = [ "ventorvar <ventorvar@gmail.com>", "th3st0rmtr00p3r <th3st0rmtr00p3r@tkdomain.org>", "VMXEO <>",]
packages = [ { include = "qtvscodestyle", from = "starfab/contrib" }, ]

[tool.briefcase]
project_name = "StarFab"
bundle = "scmodding.starfab"
version = "0.4.9"
url = "https://gitlab.com/scmodding/tools/starfab"
license = ""
author = "ventorvar"
author_email = "ventorvar@gmail.com"

[tool.poetry.dependencies]
python = ">=3.10.2,<=3.12.6"
QtPy = "^2.3.1"
QtAwesome = "^1.2.3"
PySide6 = "^6.5.2"
Pillow = "^10.0.1"
qtconsole = "^5.4.3"
humanize = "^4.8.0"
rpyc = "^6.0.0"
sentry-sdk = "^1.14.0"
pyvistaqt = "^0.11.0"
quaternionic = "^1.0.6"
toml = "^0.10.2"
rich = "^13.6.0"
briefcase = "^0.3.7"
pyrsi = "^0.1.19"

[tool.poetry.dev-dependencies]
toml = "^0.10.2"
briefcase = "^0.3.7"

[tool.briefcase.app.starfab]
formal_name = "StarFab"
description = "StarFab"
icon = "starfab/resources/starfab"
installer_icon = "starfab/resources/starfab"
sources = [ "starfab", "starfab/contrib", ]
requires = [ "-r", "build/requirements.txt",]

[tool.briefcase.app.starfab.macOS]
requires = [
    "std-nslog~=1.0.0"
]

[tool.briefcase.app.starfab.linux]
requires = [
]

[tool.briefcase.app.starfab.linux.system.debian]
system_requires = [
]

system_runtime_requires = [
    # Derived from https://doc.qt.io/qt-6/linux-requirements.html
    "libxrender1",
    "libxcb-render0",
    "libxcb-render-util0",
    "libxcb-shape0",
    "libxcb-randr0",
    "libxcb-xfixes0",
    "libxcb-xkb1",
    "libxcb-sync1",
    "libxcb-shm0",
    "libxcb-icccm4",
    "libxcb-keysyms1",
    "libxcb-image0",
    "libxcb-util1",
    "libxkbcommon0",
    "libxkbcommon-x11-0",
    "libfontconfig1",
    "libfreetype6",
    "libxext6",
    "libx11-6",
    "libxcb1",
    "libx11-xcb1",
    "libsm6",
    "libice6",
    "libglib2.0-0",
    "libgl1",
    "libegl1-mesa",
    "libdbus-1-3",
    "libgssapi-krb5-2",
]

[tool.briefcase.app.starfab.linux.system.rhel]
system_requires = [
]

system_runtime_requires = [
    "qt6-qtbase-gui",
]

[tool.briefcase.app.starfab.linux.system.arch]
system_requires = [
    "qt6-base",
]

system_runtime_requires = [
    "qt6-base",
]

[tool.briefcase.app.starfab.linux.appimage]
manylinux = "manylinux2014"

system_requires = [
    # ?? FIXME
]
linuxdeploy_plugins = []

[tool.briefcase.app.starfab.linux.flatpak]
flatpak_runtime = "org.kde.Platform"
flatpak_runtime_version = "6.4"
flatpak_sdk = "org.kde.Sdk"

[tool.briefcase.app.starfab.windows]
requires = []

# Mobile deployments
[tool.briefcase.app.starfab.iOS]
supported = false

[tool.briefcase.app.starfab.android]
supported = false

# Web deployments
[tool.briefcase.app.starfab.web]
supported = false
